--- a/siam_framsc_slides/siam_framsc_slides.tex
+++ b/siam_framsc_slides/siam_framsc_slides.tex
@@ -155,18 +155,33 @@
 
 \begin{frame}{Outline}
    \begin{enumerate}
-      \item A model optimiztion problem
+      \item A generic optimiztion problem
       \item Example 1: Image Deblurring
       \item Example 2: Blind Channel Estimation
    \end{enumerate}
 
-   %TODO put in a blurred image -> deblurred image to fill space?
+   \begin{center}
+   \begin{columns}[b]
+      \begin{column}{0.45\textwidth}
+         \begin{center}
+         \includegraphics[width=0.8\textwidth]{../ieee_spm/figures/cameraman_observed_trim.pdf}
+         \end{center}
+      \end{column}
+      
+      \begin{column}{0.45\textwidth}
+         \begin{center}
+         \includegraphics[width=0.8\textwidth]{../ieee_spm/figures/{cameraman_rec_200_bior4.4_sym_trim}.pdf}
+         \end{center}
+      \end{column}
+   \end{columns}
+   \end{center}
+
 
 \end{frame}
 
-\section{Model Problem}
+\section{Generic Problem}
 % [[[
-\begin{frame}{A Model Problem}
+\begin{frame}{A Generic Problem}
    Consider
 
    \[ \min_x \dfrac{1}{2}\|\mathcal{A}x-b\|_2^2 + \lambda \|x\|_1. \] 
@@ -190,7 +205,7 @@
 \begin{frame}{Proximal Gradient Method}
    \[ \min_x \dfrac{1}{2}\|\mathcal{A}x-b\|_2^2 + \lambda \|x\|_1. \] 
 
-   \[ \nabla f(x) = \mathcal{A}^\ast\left(\mathcal{A}x-b\right), \quad x^{+} = \operatorname{prox}_{t g}\left(x - t\nabla f(x)\right)\] 
+   \[ \nabla f(x) = \mathcal{A}^\ast\left(\mathcal{A}x-b\right), \quad x^{+} = \operatorname{prox}_{t g}\left(x - t\nabla f(x)\right). \] 
 
    \noindent Need to efficiently compute
    \begin{itemize}
@@ -277,13 +292,13 @@
 \end{frame}
 
 \begin{frame}{Adjoint of Wavelet Operator}
-   So we have $\mathcal{W}^\ast = \tilde{\mathcal{W}}^\dagger$: the adjoint of wavelet synthesis is dual wavelet reconstruction.\\
+   So we have $\mathcal{W}^\ast = \tilde{\mathcal{W}}^\dagger$: the adjoint of wavelet synthesis is dual wavelet analysis.\\
 
    But we must also handle boundary conditions.\\
 
    This is usually done by extending the signal via $\mathcal{E}$ to satisfy the BCs.\\
 
-   The relation $\mathcal{W}^\ast = \tilde{\mathcal{W}}^\dagger$ holds for $\mathcal{E}$ being zero-padding, since $\mathcal{E}^\ast = \mathcal{E}^\dagger$.  Let $\mathcal{W}_\text{zpd}$ be wavelet synthesis with zero BCs.\\
+   The relation $\mathcal{W}^\ast = \tilde{\mathcal{W}}^\dagger$ holds for $\mathcal{E}$ being zero-padding, since $\mathcal{E}_\text{zpd}^\ast = \mathcal{E}_\text{zpd}^\dagger$.  Let $\mathcal{W}_\text{zpd}$ be wavelet synthesis with zero BCs.\\
 
    In general, we have
 
@@ -296,7 +311,7 @@
 
 \end{frame}
 
-\begin{frame}{Adjoint of Extension Pseudoinverse}
+\begin{frame}{Adjoint of Pseudoinverse Extension}
    Due to factorization $\mathcal{W}^\ast = \tilde{\mathcal{W}}_\text{zpd}^\dagger(\mathcal{E}^\dagger)^\ast$, we just need to implement $(\mathcal{E}^\dagger)^\ast$!  $\tilde{\mathcal{W}}_\text{zpd}^\dagger$ is a standard and fast operation.\\[.5em]
 
    Consider a signal $y[n]$, $n=0,...,N-1$.  Let $L_p$ be the length of wavelet analysis filters.\\[.5em]
@@ -341,9 +356,9 @@
 \begin{frame}{Image Deblurring Problem}
    \begin{itemize}
       \item $\mathcal{W}^\ast = \tilde{\mathcal{W}}_\text{zpd}^\dagger(\mathcal{E}^\dagger)^\ast$.
-      \item $\tilde{\mathcal{W}}^\dagger$ is part of wavelet library and is fast.
-      \item $(\mathcal{E}^\dagger)^\ast$ is closed-form and fast.
-      \item So we can apply $\mathcal{W}^\ast$ efficiently in
+      \item $\tilde{\mathcal{W}}^\dagger$ is part of wavelet libraries and is fast.
+      \item $(\mathcal{E}^\dagger)^\ast$ is closed-form (once you find it) and fast.
+      \item So we can apply $\mathcal{W}^\ast$ efficiently \emph{and correctly} in
 
          \[ \nabla f(x) = \mathcal{W}^\ast\mathcal{R}^\ast\left(\mathcal{RW}x-b\right). \] 
    \end{itemize}
@@ -376,13 +391,20 @@
 \section{Blind Channel Estimation}
 % [[[
 \begin{frame}{BCE Problem}
-   Unknown source $s$ sends signal over unknown channels with impulse response $h_i$.  We observe channel outputs
+   %TODO could change output signals to y_i and y?  Doesn't match BCE literature, but works better with above
+   Unknown source $s$ sends signal over unknown channels with impulse responses $h_i$.  We observe channel outputs
 
    \[ x_i[n] = \{h_i\ast s\}[n]. \] 
    
    \noindent Can we recover source and channel IRs?\\
 
    Let's restrict ourselves to $h_i$ and $s$ real-valued.
+
+   Notice that for any $\alpha\neq 0$, 
+
+   \[ x_i[n] = \{h_i\ast s\}[n] = \{\alpha h_i \ast \dfrac{1}{\alpha} s\}[n]. \] 
+
+   \noindent So we can maybe recover $h_i$ and $s$ up to a factor.
 
 \end{frame}
 
@@ -575,7 +597,7 @@
 \begin{frame}{Proximal Gradient Method}
    \[ f(x) = \dfrac{1}{2}\|\mathcal{A}x-b\|_2^2, \quad g(x) = \lambda \|x\|_1. \] 
 
-   We can use a variant of simple gradient descent to solve the model problem
+   We can use a variant of simple gradient descent to solve the generic problem
 
    \[ \min_x f(x) + g(x). \] 
 
