Added a comment to slides .tex

--- a/siam_framsc_slides/siam_framsc_slides.tex
+++ b/siam_framsc_slides/siam_framsc_slides.tex
@@ -291,6 +291,7 @@
 \end{frame}
 
 \begin{frame}{Adjoint of Pseudoinverse Extension}
+   % Throughout all of this, we're trying to leverage the fact that we already have a library to compute W, W^+, etc.
    Now we just need to implement $(\mathcal{E}^\dagger)^\ast$!  $\tilde{\mathcal{W}}_\text{zpd}^\dagger$ is a standard and fast operation.\\[.5em]
 
    Consider a signal $y[n]$, $n=0,...,N-1$.  Let $L_p$ be the length of wavelet analysis filters.\\[.5em]
